# llm-news-generator

./: .gitignore  README.md  pyproject.toml
app/: setup.py  streamlit_app.py
app/core/: config.py
app/llm_langchain/: chroma_docs_store.py  docs_store.py  llm_langchain.py  llm_langchain_chat.py  utils.py
app/llm_langchain/prompt_builder/: classification_prompt_builder.py  prompt_builder.py  rewriter_prompt_builder.py  summary_prompt_builder.py
